# composium

./: .gitignore  LICENSE  README.md  README_ru.md  pyproject.toml
src/composium/: __init__.py
src/composium/core/: __init__.py  control.py  diagnostics.py  driver.py  element_mixin.py  lazy_element.py  polling.py  query.py  reporter.py
src/composium/decorators/: __init__.py  define.py  reporting.py
src/composium/factory/: __init__.py  screen_factory.py
src/composium/page/: __init__.py  base_page.py  item.py  screen.py  widget.py
src/composium/page_elements/: __init__.py  cross_platform.py  element.py  embedded.py
src/composium/utils/: __init__.py  platform.py  selectors.py
