[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "composium"
version = "0.1.0"
description = "Declarative multi-layered Page Object framework for cross-platform mobile test automation (Android + iOS). Built on Appium."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Svyatoslav Petrov", email = "svyat.petrovv@gmail.com"},
]
keywords = ["appium", "testing", "automation", "page-object", "mobile", "android", "ios"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "Appium-Python-Client>=4.0.0",
    "selenium>=4.25.0",
    "attrs>=23.0.0",
]

[project.optional-dependencies]
allure = [
    "allure-python-commons>=2.13.0",
]
dev = [
    "pytest>=8.0.0",
    "allure-pytest>=2.13.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/svyat-petrov/composium"
Repository = "https://github.com/svyat-petrov/composium"
Issues = "https://github.com/svyat-petrov/composium/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["RUF022"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]